# MiGS

./: .gitignore  Makefile  README.md  arduino-cli.yaml
MigsErrorReceiver/: MigsErrorReceiver.ino
MigsGpu/: CMakeLists.txt
MigsGpu/include/: font8x8.hpp
MigsGpu/src/: main.cpp
MigsMenu/: Font.cpp  Font.hpp  MigsMenu.ino  font.hpp
MigsProgrammer/: AvrProgrammer.cpp  AvrProgrammer.hpp  MigsProgrammer.ino  ResourceProvider.cpp  ResourceProvider.hpp  Stk500.cpp  Stk500.hpp
pcb/MiGS/: MiGS.kicad_pcb  MiGS.kicad_prl  MiGS.kicad_pro  MiGS.kicad_sch  fp-info-cache
